# hole_tracker

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  tracker_setup.sh
bags/: frames.gv
config/: main.yaml
launch/: bagtest.launch  config_1.launch  depr_init_test.launch  init_test.launch  main.launch  node_depthmap.launch  node_detector_blob.launch  node_detector_yolo.launch  node_estimate_tf.launch  node_tracker.launch  test.launch
msg/: DepthMap.msg
nnets/engine/: DS_6_orin_nx.plan  static.plan
nnets/onnx/: DS_1_rendered.onnx  DS_2_real_simple.onnx  DS_3_real_diff_shapes.onnx  DS_4_aug_heavy.onnx  DS_5_aug_restricted.onnx  DS_6_real_drone_footage.onnx
nnets/weights/: DS_1_rendered.pt  DS_2_real_simple.pt  DS_5_aug_restricted.pt  DS_6_real_drone_footage.pt  augmented_holes_1.pt  real_holes_diff_shapes.pt
rviz/: bagtest.rviz  config_1.rviz  init_test.rviz
scripts/: [test]_tracker_options.ipynb  node_depthmap.py  node_detector_blob.py  node_detector_yolo.py  node_estimate_tf.py  node_tracker.py  test.ipynb  testnode.py
scripts/utils/: EquidistantDistorter.py  HoleTracker_V2.py  equidistant_distorter.py  hole_tracker.py  hole_tracker_V3.py  image_tools.py  logging.py  multi_framework_yolo.py  tensorrt_inference.py  transformations.py  utils.py
