<?xml version="1.0"?>
<package format="2">
  <name>hole_tracker</name>
  <version>0.0.0</version>
  <description>object tracking for omav screwing task</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="steineel@student.ethz.ch">Elias Steiner</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>none</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
